# yt-transcribe

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.cursor/: AGENTS.md
docs/: DEVELOPMENT.md  HISTORICAL_REVIEW.md  README.md  USAGE.md
yt_transcribe/: __init__.py  cli.py  downloader.py  output.py  report_generator.py  transcriber.py  validation.py
